--- a/report/report.bib
+++ b/report/report.bib
@@ -129,3 +129,30 @@ author = "Peter Breitenlohner and Daniel Z. Freedman"
   url = {http://link.aps.org/doi/10.1103/PhysRev.109.1398},
   publisher = {American Physical Society}
 }
+@article{drude,
+   author = {{Drude}, P.},
+    title = "{Zur Elektronentheorie der Metalle}",
+  journal = {Annalen der Physik},
+     year = 1900,
+   volume = 306,
+    pages = {566-613},
+      doi = {10.1002/andp.19003060312},
+   adsurl = {http://adsabs.harvard.edu/abs/1900AnP...306..566D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{drudeFit,
+   author = {{Liu}, H.~L. and {Quijada}, M. and {Romero}, D.~B. and {Tanner}, D.~B. and 
+	{Zibold}, A. and {Carr}, G.~L. and {Berger}, H. and {Forr{\'o}}, L. and 
+	{Mihaly}, L. and {Cao}, G. and {O}, B.-H. and {Markert}, J.~T. and 
+	{Rice}, J.~P. and {Burns}, M.~J. and {Delin}, K.~A.},
+    title = "{Drude behavior in the far-infrared conductivity of cuprate superconductors}",
+  journal = {Annalen der Physik},
+ keywords = {Infrared, Drude, cuprate},
+     year = 2006,
+    month = jul,
+   volume = 518,
+    pages = {606-618},
+      doi = {10.1002/andp.200510205},
+   adsurl = {http://adsabs.harvard.edu/abs/2006AnP...518..606L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
